--- a/src/components/timeEntryTable.css
+++ b/src/components/timeEntryTable.css
@@ -1,17 +1,17 @@
-.dx-datagrid-table {
-  border-collapse: separate;
-  border-spacing: 0;
-  border: 1px solid black;
-  float: left;
-  text-align: center;
-}
 .dx-datagrid-table tr:nth-child(even) {
   background-color: #e6ebfe;
-  border-top: 1px solid black;
-  border-bottom: 1px solid black;
 }
 
 .dx-datagrid {
-  padding: 0.7em 0.7em 1em 40em;
+  padding: 0.7em 0.7em 1em 25em;
   border: 1px solid rgb(255, 0, 0);
+}
+
+.custom-datagrid .dx-datagrid-rowsview,
+.custom-datagrid .dx-datagrid-headers {
+  border: 2px solid black; /* Schwarzer Rahmen um die Tabelle */
+}
+.custom-datagrid .dx-datagrid-rowsview {
+  border: 2px solid black; /* Schwarzer Rahmen um die Tabelle */
+  margin-top: -2px; /* Den oberen Rand nach oben verschieben, um die Linie zu überdecken */
 }
