--- a/src/components/actions.css
+++ b/src/components/actions.css
@@ -1,19 +1,4 @@
-.buttonStyle {
-  background-color: #2858c1;
-  width: 50px;
-  height: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-right: 10px;
-  color: white;
-}
-
-.buttonStyle:active {
-  background-color: #000000;
-}
-
 .button-container {
   display: flex;
-  float: right;
+  gap: 15px;
 }
