--- a/src/components/timeEntryTable.css
+++ b/src/components/timeEntryTable.css
@@ -4,13 +4,13 @@
 
 .dx-datagrid {
   padding: 0.7em 0.7em 1em 25em;
-  border: 1px solid rgb(255, 0, 0);
+  border: 1px solid rgb(0, 0, 0);
 }
 
-.custom-datagrid .dx-datagrid-rowsview,
+/* .custom-datagrid .dx-datagrid-rowsview,
 .custom-datagrid .dx-datagrid-headers {
   border: 2px solid black; /* Schwarzer Rahmen um die Tabelle */
-}
+} */
 .custom-datagrid .dx-datagrid-rowsview {
   border: 2px solid black; /* Schwarzer Rahmen um die Tabelle */
   margin-top: -2px; /* Den oberen Rand nach oben verschieben, um die Linie zu überdecken */
